--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "discord.js": "^12.5.0",
     "discord.js-pagination": "^1.0.3",
     "fs": "0.0.1-security",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6"
   }
 }
